--- a/default.css
+++ b/default.css
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@600&display=swap');
 
 * { 
-  padding: 10;
-  margin: 10;
+  /* padding: 10;
+  margin: 10; */
   box-sizing: border-box;
 }
 
@@ -20,7 +20,6 @@ a {
 }
 
 .container {
-
   width: 100%;
   display: flex;
   align-items: center;
